--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,72 @@
+* {
+    box-sizing: border-box;
+}
+html, body {
+    height: 100%;
+    margin: 0;
+}
 body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
+    font-family: "ABeeZee", sans-serif;
+    background-image: linear-gradient(#e6e6ff, #6666ff);
+}
+.vh {
+    height: 100%;
 }
 
+nav {
+    background-color: #6666ff ;
+    overflow: hidden;
+}
+nav a {
+    background-color: goldenrod;
+    color: black;
+    padding:20px;
+    display:block;
+    float: left; 
+    text-decoration: none;  
+
+}
+nav a:hover {
+    background-color: #e6e6ff;
+}
+footer {
+    background-color: #e6e6ff;
+    color: black;
+    overflow: hidden;
+}
+footer a {
+    background-color: goldenrod;
+    color: black;
+    padding:20px;
+    display:inline-block;
+    text-decoration: none;       
+}
+footer a:hover {
+    background-color: #e6e6ff;
+}
 #quote-box {
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-image: linear-gradient(#6666ff, #e6e6ff);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 2px 2px grey;
     text-align: center;
+    width:280px;
 }
-
+#quote {
+    display: none;
+}
+ 
 button {
-    margin-top: 20px;
+    margin-top: 25px;
     padding: 10px 20px;
     border: none;
-    background-color: #007BFF;
-    color: white;
+    background-color: goldenrod;
+    color:black;
     border-radius: 5px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #6666ff;
+    color: black;
 }
