--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,95 @@
 * {
     box-sizing: border-box;
 }
-html, body {
-    height: 100%;
-    margin: 0;
-}
 body {
     font-family: "ABeeZee", sans-serif;
-    background-image: linear-gradient(#e6e6ff, #6666ff);
+    height: 100vh;
 }
-.vh {
-    height: 100%;
-}
-
 nav {
-    background-color: #6666ff ;
-    overflow: hidden;
-}
-nav a {
-    background-color: goldenrod;
-    color: black;
-    padding:20px;
-    display:block;
-    float: left; 
-    text-decoration: none;  
-
-}
-nav a:hover {
-    background-color: #e6e6ff;
-}
-footer {
-    background-color: #e6e6ff;
-    color: black;
-    overflow: hidden;
-}
-footer a {
-    background-color: goldenrod;
-    color: black;
-    padding:20px;
-    display:inline-block;
-    text-decoration: none;       
-}
-footer a:hover {
-    background-color: #e6e6ff;
-}
-#quote-box {
-    background-image: linear-gradient(#6666ff, #e6e6ff);
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 2px 2px grey;
+    margin: 0;
+    padding: 0;
+    width: 250px;
+    background-color: #006666;
+    position: fixed;
+    height: 100vh;
+    overflow: auto;
     text-align: center;
-    width:280px;
+}
+
+nav a {
+    display: block;
+    color: white;
+    padding: 20px;
+    text-decoration: none;
+    background-color: #003333;
+  }
+   
+  nav a.active {
+    background-color: #003333;
+    color: white;
+  }
+  
+  nav a:hover:not(.active) {
+    background-color: #00b3b3;
+    color: black;
+  }
+main {
+    margin-left: 250px;
+    height: 100vh;
+  }
+  @media screen and (max-width: 767px) {
+    nav {
+      width: 100%;
+      height: auto;
+      position: relative;
+      display:flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    nav a {
+        float: left;
+        padding:10px;
+    }
+    main {
+        margin-left: 0;
+    }
+    #profile-link {
+      display:none;
+    }
+  }
+  
+  @media screen and (max-width: 527px) {
+    nav a {
+      text-align: center;
+      float: none;
+    }
+    #profile-link {
+      display:none;
+    }
+  }
+#quote-box {
+    border: 2px solid #e6ffff;
+    border-radius: 7px;
+    box-shadow: 3px 3px #99ffff;
+    height:280px;
 }
 #quote {
     display: none;
 }
- 
 button {
-    margin-top: 25px;
+    margin-top: 50px;
     padding: 10px 20px;
     border: none;
-    background-color: goldenrod;
-    color:black;
+    background-color: #003333;
+    color:white;
     border-radius: 5px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #6666ff;
-    color: black;
+    background-color: #006666;
+    color: white;
 }
+
+
+
